--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,22 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "accesto/payum-pay-u": "^0.3.1",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "friendsofsymfony/ckeditor-bundle": "^2.3",
+        "openpayu/openpayu": "^2.3",
+        "payum/payum-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
+        "symfony/event-dispatcher": "5.3.*",
         "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
